name:                opengl-spacenavigator
version:             0.1.0.0

license:             MIT
license-file:        LICENSE
author:              Brian W Bush <consult@brianwbush.info>
maintainer:          Brian W Bush <consult@brianwbush.info>
copyright:           (c) 2015 Brian W Bush
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
stability:           Stable
homepage:            https://bitbucket.org/bwbush/opengl-spacenavigator
bug-reports:         https://bitbucket.org/bwbush/opengl-spacenavigator/issues
package-url:         https://bitbucket.org/bwbush/opengl-spacenavigator/downloads/opengl-spacenavigator-0.1.0.0.tar.gz

extra-source-files:  ReadMe.md

source-repository head
  type: git
  location: https://bwbush@bitbucket.org/bwbush/opengl-spacenavigator
 
library
  exposed-modules:  Graphics.UI.SpaceNavigator
  build-depends:    base   >=  4.6 && < 5
               ,    data-default
               ,    GLUT   >=  2.4
               ,    OpenGL >=  2.8
  hs-source-dirs:   src
  default-language: Haskell2010

executable opengl-spacenavigator
  main-is:          Main.hs
  build-depends:    base   >=  4.6 && < 5
               ,    data-default
               ,    GLUT   >=  2.4
               ,    OpenGL >=  2.8
  hs-source-dirs:   src
  default-language: Haskell2010
